# pandera-tool

./: README.md  pyproject.toml
pandera_tool/: __init__.py
tests/: test_pandera_tool.py
